--- a/src/Presentation/Web/Views/User/Login.cshtml
+++ b/src/Presentation/Web/Views/User/Login.cshtml
@@ -21,6 +21,8 @@
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+
+                <input asp-for="ReturnUrl"  type="hidden"/>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
