--- a/src/Presentation/Web/Views/Home/HomePage.cshtml
+++ b/src/Presentation/Web/Views/Home/HomePage.cshtml
@@ -22,7 +22,7 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">User List</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Ticket</a> 
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Create">Ticket</a> 
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Role</a>
@@ -30,6 +30,10 @@
                                 <li class="nav-item">
                                     Welcome @User.Claims.FirstOrDefault(System.Security.Claims.ClaimTypes.Name);
                                 </li>*@
+                                &nbsp;
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Log Out</a>
+                                </li>
                             </ul>
                         </div>
             </div>
@@ -37,3 +41,7 @@
     </header>
 </body>
 </html>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
