--- a/src/Presentation/Web/Views/Home/HomePage.cshtml
+++ b/src/Presentation/Web/Views/Home/HomePage.cshtml
@@ -22,7 +22,7 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">User List</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Create">Ticket</a> 
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Ticket</a> 
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Role</a>
