--- a/src/Presentation/Web/Views/User/Index.cshtml
+++ b/src/Presentation/Web/Views/User/Index.cshtml
@@ -6,14 +6,12 @@
 
 <h1>Index</h1>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="RegisterUser" class="btn btn-outline-warning">Create New</a>&nbsp;
+    <a asp-controller="Home" asp-action="HomePage" class="btn btn-outline-info">HomePage</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.UserName)
             </th>
@@ -35,18 +33,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
@@ -68,13 +60,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOfBirth)
-            </td>
            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <div class="w-75 btn-group" role="group">
+                    <a asp-controller="User" asp-action="EditUser" asp-route-Id="@item.Id"
+                    class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>@*
+                    <a asp-controller="User" asp-action="DeleteUser" asp-route-Id="@item.Id"
+                    class="btn btn-danger mx-2"><i class="bg-info bi-trash-fill"></i>Delete</a>*@
+                    <a asp-controller="User" asp-action="UserDetails" asp-route-Id="@item.Id"
+                    class="btn btn-danger mx-2"><i class="bg-info bi-ticket-detailed"></i>Details</a>
+                </div>
             </td>
         </tr>
 }
