--- a/src/Presentation/Web/Views/Category/Index.cshtml
+++ b/src/Presentation/Web/Views/Category/Index.cshtml
@@ -33,34 +33,40 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDateTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ModifiedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ModifiedDateTime)
-            </td>
-            <td>
-                <div class="w-75 btn-group" role="group">
-                    <a asp-controller="Category" asp-action="EditCategory" asp-route-CId="@item.CId"
+        @{
+            if (Model != null)
+            {
+                foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CategoryName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreatedBy)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreatedDateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ModifiedBy)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ModifiedDateTime)
+                        </td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-action="EditCategory" asp-route-CId="@item.CId"
                     class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>@*
                     <a asp-controller="Category" asp-action="DeleteCategory" asp-route-CId="@item.CId"
                     class="btn btn-danger mx-2"><i class="bg-info bi-trash-fill"></i>Delete</a>*@
-                    <a asp-controller="Category" asp-action="CategoryDetails" asp-route-CId="@item.CId"
+                                <a asp-controller="Category" asp-action="CategoryDetails" asp-route-CId="@item.CId"
                     class="btn btn-danger mx-2"><i class="bg-info bi-ticket-detailed"></i>Details</a>
-                </div>
-            </td>
-        </tr>
-}
+                            </div>
+                        </td>
+                    </tr>
+                }
+            }
+        }
     </tbody>
 </table>
