--- a/src/Presentation/Web/Views/Ticket/Index.cshtml
+++ b/src/Presentation/Web/Views/Ticket/Index.cshtml
@@ -81,8 +81,8 @@
             <div class="w-75 btn-group" role="group">
                     <a asp-controller="Ticket" asp-action="EditTicket" asp-route-TicketId="@item.TicketId"
                     class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
-                    <a asp-controller="Ticket" asp-action="DeleteTicket" asp-route-TicketId="@item.TicketId"
-                    class="btn btn-danger mx-2"><i class="bg-info bi-trash-fill"></i>Delete</a>
+                    @*<a asp-controller="Ticket" asp-action="DeleteTicket" asp-route-TicketId="@item.TicketId"
+                    class="btn btn-danger mx-2"><i class="bg-info bi-trash-fill"></i>Delete</a>*@
                     <a asp-controller="Ticket" asp-action="DetailTicket" asp-route-TicketId="@item.TicketId"
                     class="btn btn-danger mx-2"><i class="bg-info bi-ticket-detailed"></i>Details</a>
                 </div>
