--- a/src/Presentation/Web/Views/Role/CreateRole.cshtml
+++ b/src/Presentation/Web/Views/Role/CreateRole.cshtml
@@ -17,7 +17,7 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-outline-success">Back to List</a>
