--- a/src/Presentation/Web/Views/Role/Index.cshtml
+++ b/src/Presentation/Web/Views/Role/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-controller="Role" asp-action="Create"class="btn btn-outline-success">Create New</a>
+    <a asp-action="CreateRole" class="btn btn-outline-success">Create New</a>
     &nbsp;
     <a asp-controller="Home" asp-action="HomePage" class="btn btn-outline-info">HomePage</a>
 </p>
@@ -25,12 +25,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-             <td>
+             <td><br/>
                 <div class="w-75 btn-group" role="group">
                     <a asp-controller="Role" asp-action="EditRole" asp-route-Id="@item.Id"
-                    class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
-                    <a asp-controller="Role" asp-action="Delete" asp-route-Id="@item.Id"
-                    class="btn btn-danger mx-2"><i class="bg-info bi-trash-fill"></i>Delete</a>
+                    class="btn btn-primary mx-2" ><i class="bi bi-pencil-square"></i>Edit</a>
                 </div>
             </td>
         </tr>
