--- a/src/Presentation/Web/Views/User/AssignRole.cshtml
+++ b/src/Presentation/Web/Views/User/AssignRole.cshtml
@@ -6,7 +6,7 @@
 
 <form method="post">
     <div class="card-header">
-        <h2>Add or removw users from this role</h2>
+        <h2>Add or remove users from this role</h2>
     </div>
     <div class="card-body">
         
