--- a/src/Presentation/Web/Views/User/Index.cshtml
+++ b/src/Presentation/Web/Views/User/Index.cshtml
@@ -63,9 +63,9 @@
            <td>
                 <div class="w-75 btn-group" role="group">
                     <a asp-controller="User" asp-action="EditUser" asp-route-Id="@item.Id"
-                    class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>@*
-                    <a asp-controller="User" asp-action="DeleteUser" asp-route-Id="@item.Id"
-                    class="btn btn-danger mx-2"><i class="bg-info bi-trash-fill"></i>Delete</a>*@
+                    class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
+                    <a asp-controller="User" asp-action="AssignRole" asp-route-Id="@item.Id"
+                    class="btn btn-danger mx-2"><i class="bi bi-dpad-fill"></i>Manage Role</a>
                     <a asp-controller="User" asp-action="UserDetails" asp-route-Id="@item.Id"
                     class="btn btn-danger mx-2"><i class="bg-info bi-ticket-detailed"></i>Details</a>
                 </div>
