--- a/src/Presentation/Web/Views/Role/Index.cshtml
+++ b/src/Presentation/Web/Views/Role/Index.cshtml
@@ -29,6 +29,8 @@
                 <div class="w-75 btn-group" role="group">
                     <a asp-controller="Role" asp-action="EditRole" asp-route-Id="@item.Id"
                     class="btn btn-primary mx-2" ><i class="bi bi-pencil-square"></i>Edit</a>
+                    <a asp-controller="Role" asp-action="AssignPermissionToRole" asp-route-Id="@item.Id"
+                    class="btn btn-danger mx-2" ><i class="bi bi-dpad-fill"></i>Manage Permission</a>
                 </div>
             </td>
         </tr>
