--- a/src/Presentation/Web/Views/User/AssignRole.cshtml
+++ b/src/Presentation/Web/Views/User/AssignRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model Repository.Entites.UserRole
+﻿@model List<Repository.Entites.UserRole>
 
 @{
     var roleId = ViewBag.roleId;
@@ -6,9 +6,22 @@
 
 <form method="post">
     <div class="card-header">
-        <h2>Add or remove users from this role</h2>
+        <h2>Assign role to this User</h2>
     </div>
     <div class="card-body">
-        
+        @for (int i=0; i <Model.Count; i++)
+        {
+            <div class="form-check m-1">
+                <input type="hidden" asp-for="@Model[i].RoleId"/>
+                <input asp-for="@Model[i].IsSelected" class="form-check-input"/>
+                <label class="form-check-label">
+                    @Model[i].aRole
+                </label>
+                </div>
+        }
+        <div class="card-footer">
+            <input type="submit" value="Update" class="btn btn-primary" style="width:auto" />
+            <a asp-action="EditRole" asp-route-id="@roleId" class="btn btn-primary" style="width:auto">cancel</a>
+        </div>
     </div>
 </form>
