--- a/src/Presentation/Web/Views/User/Index.cshtml
+++ b/src/Presentation/Web/Views/User/Index.cshtml
@@ -5,72 +5,72 @@
 }
 
 <h1>Index</h1>
-<p>
-    <a asp-action="RegisterUser" class="btn btn-outline-warning">Create New</a>&nbsp;
-    <a asp-controller="Home" asp-action="HomePage" class="btn btn-outline-info">HomePage</a>
-</p>
-<table class="table">
+<div class="row">
+    <div class="col">
+        <a asp-action="RegisterUser" class="btn btn-sm btn-primary pull-right">Create New</a>
+    </div>
+</div>
+<table class="table table-striped table-responsive">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserName)
+                Username
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                First Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                Last Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Address)
+                Address
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                Email
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Age)
+                Age
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Phone Number
             </th>
-            <th></th>
+            <th>
+                Action
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-           <td>
-                <div class="w-75 btn-group" role="group">
-                    <a asp-controller="User" asp-action="EditUser" asp-route-Id="@item.Id"
-                    class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>
-                    <a asp-controller="User" asp-action="AssignRole" asp-route-Id="@item.Id"
-                    class="btn btn-danger mx-2"><i class="bi bi-dpad-fill"></i>Manage Role</a>
-                    <a asp-controller="User" asp-action="UserDetails" asp-route-Id="@item.Id"
-                    class="btn btn-danger mx-2"><i class="bg-info bi-ticket-detailed"></i>Details</a>
-                </div>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Age)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a title="Edit" asp-controller="User" asp-action="EditUser" asp-route-Id="@item.Id" class="btn btn-sm btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                        <a title="Manage Role" asp-controller="User" asp-action="AssignRole" asp-route-Id="@item.Id" class="btn btn-sm btn-warning mx-2"><i class="bi bi-shield-lock"></i></a>
+                        <a title="Detail" asp-controller="User" asp-action="UserDetails" asp-route-Id="@item.Id" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
+                    </div>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
