--- a/src/Presentation/Web/Views/Category/Index.cshtml
+++ b/src/Presentation/Web/Views/Category/Index.cshtml
@@ -6,30 +6,30 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create" class="btn btn-outline-success">Create New</a>
-&nbsp;
-    <a asp-controller="Home" asp-action="HomePage" class="btn btn-outline-info">HomePage</a>
-</p>
-<table class="table">
+<div class="row">
+    <div class="col">
+        <a asp-action="Create" class="btn btn-sm btn-primary pull-right">Create New</a>
+    </div>
+</div>
+<table class="table table-striped table-responsive">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.CategoryName)
+                CategoryName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatedBy)
+                CreatedBy
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatedDateTime)
+                CreatedDateTime
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ModifiedBy)
+                ModifiedBy
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ModifiedDateTime)
+               ModifiedDateTime
             </th>
-            <th></th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -56,12 +56,8 @@
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Category" asp-action="EditCategory" asp-route-CId="@item.CId"
-                    class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i>Edit</a>@*
-                    <a asp-controller="Category" asp-action="DeleteCategory" asp-route-CId="@item.CId"
-                    class="btn btn-danger mx-2"><i class="bg-info bi-trash-fill"></i>Delete</a>*@
-                                <a asp-controller="Category" asp-action="CategoryDetails" asp-route-CId="@item.CId"
-                    class="btn btn-danger mx-2"><i class="bg-info bi-ticket-detailed"></i>Details</a>
+                                <a title ="Edit" asp-controller="Category" asp-action="EditCategory" asp-route-CId="@item.CId" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                                <a title="Detail" asp-controller="Category" asp-action="CategoryDetails" asp-route-CId="@item.CId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
                             </div>
                         </td>
                     </tr>
