--- a/src/Presentation/Web/Views/Role/Index.cshtml
+++ b/src/Presentation/Web/Views/Role/Index.cshtml
@@ -27,8 +27,8 @@
             </td>
              <td><br/>
                 <div class="w-75 btn-group" role="group">
-                    <a title="Edit" asp-controller="Role" asp-action="EditRole" asp-route-Id="@item.Id" class="btn btn-primary mx-2" ><i class="bi bi-pencil-square"></i></a>
-                    <a title="ManagePermission" asp-controller="Role" asp-action="AssignPermissionToRole" asp-route-Id="@item.Id" class="btn btn-danger mx-2" ><i class="bi bi-shield-lock"></i></a>
+                    <a title="Edit" asp-controller="Role" asp-action="EditRole" asp-route-Id="@item.Id" class="btn btn-danger mx-2" ><i class="bi bi-shield-lock"></i></a>
+                      <a title="Detail" asp-controller="Role" asp-action="RoleDetails" asp-route-Id="@item.Id" class="btn btn-sm btn-dark mx-2"><i class="bi bi-eye"></i></a>
                 </div>
             </td>
         </tr>
