--- a/src/Presentation/Web/Views/User/EditUser.cshtml
+++ b/src/Presentation/Web/Views/User/EditUser.cshtml
@@ -33,14 +33,19 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control" />
-                <span asp-validation-for="Age" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="PhoneNumber" class="control-label"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div><br />
+            <div class="xol-sm-2">
+                <label asp-for="Role" class="label-control"></label>
+                <select asp-for="Role" class="form-control">
+                    @foreach(var role in Model.Roles)
+                    {
+                        <option value="@role.Id" class="text-danger">@role.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="Role" class="text-danger"></span>
             </div><br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
