--- a/src/Presentation/Web/Views/User/Index.cshtml
+++ b/src/Presentation/Web/Views/User/Index.cshtml
@@ -35,6 +35,9 @@
                 Phone Number
             </th>
             <th>
+                Role
+            </th>
+            <th>
                 Action
             </th>
         </tr>
@@ -62,6 +65,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(ModelItem => item.Role)
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
