--- a/src/Presentation/Web/Views/User/VerifyAccount.cshtml
+++ b/src/Presentation/Web/Views/User/VerifyAccount.cshtml
@@ -7,7 +7,7 @@
 @if (ViewBag.Status != null && Convert.ToBoolean(ViewBag.Status))
 {
     <div class="alert alert-success">
-        <strong>Success!</strong> Your account has been activated successfully. Click here to @Html.ActionLink("Login","Login","User")
+        <strong>Success!</strong> Your account has been activated successfully. Click here to @Html.ActionLink("Login","Login","Register")
     </div>
 }
 else{
