--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -39,9 +39,6 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Role</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Permission" asp-action="Index">Permission</a>
-                            </li>
                              <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Combine" asp-action="Index">UserRole</a>
                             </li>
@@ -51,6 +48,9 @@
                           <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="ChangePassword">ChangePasword</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Permission" asp-action="Index">Logout</a>
+                            </li> 
                              <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserProfile">Profile</a>
                             </li> 
@@ -92,6 +92,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    @await Component.InvokeAsync("NToastNotify")
+    @*@await Component.InvokeAsync("NToastNotify")*@
 </body>
 </html>
