--- a/src/Presentation/Web/Views/Permission/Index.cshtml
+++ b/src/Presentation/Web/Views/Permission/Index.cshtml
@@ -27,7 +27,7 @@
                 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Slug)
             </td>
             <td>
                 <div class="w-75 btn-group" role="group">
