--- a/src/Presentation/Web/Views/Permission/DeletePermission.cshtml
+++ b/src/Presentation/Web/Views/Permission/DeletePermission.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.PermissionId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Slug)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Slug)
         </dd>
     </dl>
     
