--- a/src/Presentation/Web/Views/Role/RoleDetails.cshtml
+++ b/src/Presentation/Web/Views/Role/RoleDetails.cshtml
@@ -16,6 +16,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Permissions)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Permissions)
+        </dd>
+
     </dl>
 </div>
 <div>
