permission controller clear

--- a/src/Presentation/Web/Views/User/UserProfile.cshtml
+++ b/src/Presentation/Web/Views/User/UserProfile.cshtml
@@ -57,7 +57,7 @@
             
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
-                 <a asp-action="Index" class="bt btn-group-sm">Back to List</a>
+                 <a asp-controller="Home" asp-action="Homepage" class="bt btn-group-sm">Back to List</a>
             </div>
         </form>
     </div>
