--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Ticket</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller ="Ticket" asp-action="UserIndex">Your Ticket</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Role</a>
                             </li>
                              <li class="nav-item">
@@ -49,7 +52,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="ChangePassword">ChangePasword</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Permission" asp-action="Index">Logout</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Permission" asp-action="Index">PermissionList</a>
                             </li> 
                              <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserProfile">Profile</a>
