--- a/src/Presentation/Web/Views/Ticket/Index.cshtml
+++ b/src/Presentation/Web/Views/Ticket/Index.cshtml
@@ -48,7 +48,7 @@
             {
                 foreach (var item in Model)
                 {
-                   ////if(User.Claims =){
+                   //if(User.Identity.AuthenticationType. =){
                    //    <tr>
                    //             <td>
                    //                 @Html.DisplayFor(modelItem => item.TicketDetails)
