--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserProfile">Profile</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="CompanyExcel" asp-action="Index">Company</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="CategoryTemp" asp-action="Index">Temp</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="DeveloperIndex">DevTicket</a>
