--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -65,6 +65,9 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="CategoryTemp" asp-action="Index">Temp</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="FieldValidate" asp-action="Index">Validate</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="DeveloperIndex">DevTicket</a>
                                 </li>
                                 <li class="nav-item">
