--- a/src/Presentation/Web/Views/Ticket/Index.cshtml
+++ b/src/Presentation/Web/Views/Ticket/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@model X.PagedList.IPagedList<Repository.Entites.Ticket>
 @using X.PagedList.Mvc.Core;
 @using X.PagedList;
-
+<link href="~/css/page.css" rel="stylesheet" />
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
+<
 <div class="row">
     <div class="col">
         <a asp-action="Create" class="btn btn-sm btn-primary pull-right">Create New</a>
@@ -27,10 +28,10 @@
                TicketDetails
             </th>
             <th>
-                @Html.ActionLink("CreatedBy","Index",new{Sorting_Order = ViewBag.SortingName}) 
+                @Html.ActionLink("CreatedBy","Index",new{Sorting_Order = ViewBag.SortingName, Filter_Value = ViewBag.FilterValue}) 
             </th>
             <th>
-                 @Html.ActionLink("CreatedDateTime","Index",new{Sorting_Order = ViewBag.SortingDate}) 
+                 @Html.ActionLink("CreatedDateTime","Index",new{Sorting_Order = ViewBag.SortingDate, Filter_Value = ViewBag.FilterValue}) 
             </th>
             <th>
                 ModifiedDateTime
